Revert "Add arguments to server and console script to prevent warnings (#2698)"
This reverts commit 428fe0ddf7d022abb0318650b1a550aaf1327377.